--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-boilerplate-2021",
-  "homepage": "https://<your username>.github.io/react-boilerplate-2021",
+  "homepage": "https://google.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
